Fix IE scrollbar, responsive banner improvements

--- a/web/css/institution/custom.css
+++ b/web/css/institution/custom.css
@@ -1,3 +1,6 @@
+html {
+  -ms-overflow-style: scrollbar;
+}
 .page-wrapper {
   min-height: 100%;
   margin: 0 auto;
